tests/ui/const-generics/mgca/printing_valtrees_supports_non_values.stderr
error: the constant `Option::<u32>::Some(N)` is not of type `Foo`
  --> $DIR/printing_valtrees_supports_non_values.rs:18:13
   |
LL |     foo::<{ Option::Some::<u32> { 0: N } }>;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Foo`, found `Option<u32>`
   |
note: required by a const generic parameter in `foo`
  --> $DIR/printing_valtrees_supports_non_values.rs:15:8
   |
LL | fn foo<const N: Foo>() {}
   |        ^^^^^^^^^^^^ required by this const generic parameter in `foo`

error: the constant `Option::<u32>::Some(<T as Trait>::ASSOC)` is not of type `Foo`
  --> $DIR/printing_valtrees_supports_non_values.rs:23:13
   |
LL |     foo::<{ Option::Some::<u32> { 0: <T as Trait>::ASSOC } }>();
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Foo`, found `Option<u32>`
   |
note: required by a const generic parameter in `foo`
  --> $DIR/printing_valtrees_supports_non_values.rs:15:8
   |
LL | fn foo<const N: Foo>() {}
   |        ^^^^^^^^^^^^ required by this const generic parameter in `foo`

error[E0277]: the trait bound `T: Trait` is not satisfied
  --> $DIR/printing_valtrees_supports_non_values.rs:30:5
   |
LL |     foo::<{ Option::Some::<u32> { 0: <T as Trait>::ASSOC } }>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Trait` is not implemented for `T`
   |
help: consider restricting type parameter `T` with trait `Trait`
   |
LL | fn test_ice_missing_bound<T: Trait>() {
   |                            +++++++

error: the constant `Option::<u32>::Some(_)` is not of type `Foo`
  --> $DIR/printing_valtrees_supports_non_values.rs:30:13
   |
LL |     foo::<{ Option::Some::<u32> { 0: <T as Trait>::ASSOC } }>();
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Foo`, found `Option<u32>`
   |
note: required by a const generic parameter in `foo`
  --> $DIR/printing_valtrees_supports_non_values.rs:15:8
   |
LL | fn foo<const N: Foo>() {}
   |        ^^^^^^^^^^^^ required by this const generic parameter in `foo`

error: the constant `Option::<u32>::Some(_)` is not of type `Foo`
  --> $DIR/printing_valtrees_supports_non_values.rs:36:13
   |
LL |     foo::<{ Option::Some::<u32> { 0: _ } }>();
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Foo`, found `Option<u32>`
   |
note: required by a const generic parameter in `foo`
  --> $DIR/printing_valtrees_supports_non_values.rs:15:8
   |
LL | fn foo<const N: Foo>() {}
   |        ^^^^^^^^^^^^ required by this const generic parameter in `foo`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0277`.
